--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.2.1",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icon-picker": "^1.0.0",
@@ -19,6 +21,7 @@
     "react-scripts": "5.0.1",
     "redux": "4.2.0",
     "redux-devtools-extension": "2.13.9",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.62.1",
     "shortid": "^2.2.16",
     "web-vitals": "^2.1.4"
@@ -27,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-server": "json-server --watch db.json --port 3011",
+    "start-json-server": "yarn json-server"
   },
   "eslintConfig": {
     "extends": [
